# PhosphorusGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.c
cmake/: phosphorus_gui_config.cmake.in
include/: phosphorus_gui.h  timey.h  vibrant_logs.h
src/: phosphorus_gui.c
